css/styles_NEW.css
/* ... */
.project-hero #project-hero-eyebrow {
	font-size: 14px;
	font-family: 'DM Mono', monospace;
	font-weight: 300;
	display: block;
	color: var(--color-blue);
	margin-bottom: var(--spacing-1);
	text-transform: uppercase;
	letter-spacing: 0.05em;
}

.project_title_left {
	width: 75%;
	margin: 0 auto;
}

.project-hero {
	background: linear-gradient(
		to top,
		rgba(124, 138, 167, 0.10) 0%,
		rgba(255, 255, 255, 1.0) 100%
		);
	width: 100%;
	padding: 6em 0em 4em 0em;
	font-size: 1.25em;
	line-height: 1.7em;
}

.project-hero-inner {
	width: 62%;
	margin: 0 auto;
	max-width: 860px;
}

.writing ul {
	list-style-type: none;
	padding-left: var(--spacing-0);
	margin-left: var(--spacing-0);
	margin-top: var(--spacing-15);
}

.writing li {
	padding: var(--spacing-6) var(--spacing-0);
	border-top: 1px solid var(--color-light-gray);
	border-bottom: 1px solid var(--color-light-gray);
}

.writing li img {
	border-radius: 8px;
	width: 120px;
	margin-bottom: 0;
	border: 1px solid var(--color-light-gray);
}

.writing a {
	letter-spacing: 0.02em;
}

ul.writing-list li {
	background-color: var(--color-white);
	padding-left: var(--spacing-6);
	padding-right: var(--spacing-6);
	-o-transition: all .2s ease-in-out;
	-ms-transition: all .2s ease-in-out,;
	-moz-transition: all .2s ease-in-out;
	-webkit-transition: all .2s ease-in-out;
	transition: all .2s ease-in-out;
	display: flex;
	align-items: center;
	justify-content: flex-start;
	gap: var(--spacing-5);
}

ul.writing-list li:hover {
	background-color: var(--color-light-gray);
	border-radius: 8px;
}

.writing-list .material-symbols-outlined {
	font-size: 20px;
	font-weight: 300;
	margin-left: auto;
}

.writing-list p {
	margin-bottom: 0;
}

.project_images {
	margin: 0px auto;
	padding-top: var(--spacing-12);
	max-width: 1148px;
	clear: both;
}

.project_images img {
	border-radius: 8px;
}

.col_left {
	width: 75%;
	padding-bottom: var(--spacing-0);
	margin: 0 auto;
}

.col_left h2 {
	display: inline-block;
}

.col_right {
	float: right;
}

.hero {
	padding: 90px 0px;
	width: 100%;
	font-weight: 500;
	margin: 0 auto;
	margin-top: 60px;
	background-color: var(--color-white);
	color: var(--color-black);
}

.hero_inner {
	width: 85%;
	max-width: 1148px;
	margin: 0 auto;
	text-align: left;
	font-size: 52px;
	line-height: 1.1em;
}

.hero_inner_about {
	text-indent: 0;
	min-height: 500px;
}

.quote-card {
	background-color: var(--color-light-gray);
	padding: var(--spacing-5);
	border-radius: 4px;
	font-size: 20px;
	letter-spacing: 0.02em;
	line-height: 1.7em;
	font-weight: 300;
	display: inline-block;
	margin: 0 0 1em;
}

.quote-card_negative {
	background-color: var(--color-light-gray);
	padding: 16px 20px;
	/* border: 1px solid #FF6663; */
	border-radius: 4px;
	font-size: 20px;
	letter-spacing: 0.02em;
	line-height: 1.7em;
	font-weight: 300;
	display: inline-block;
	margin: 0 0 1em;
}

.quote-card_positive {
	background-color: var(--color-light-gray);
	padding: var(--spacing-4) var(--spacing-5);
	/* border: 1px solid #8ACB88; */
	border-radius: 4px;
	font-size: 20px;
	letter-spacing: 0.02em;
	line-height: 1.7em;
	font-weight: 300;
	display: inline-block;
	margin: 0 0 1em;
}

.back_to_top {
	font-family: 'entypo';
	font-size: 2.5em;
	padding: 5px 5px 0px 5px;
	background-color: var(--color-black);
	text-align: center;
	width: 50px;
	margin: 0 auto;
	border-top-left-radius: 2px;
	border-top-right-radius: 2px;
}

.back_to_top a:link {
	color: var(--color-light-blue);
}

.back_to_top a:visited {
	color: var(--color-light-blue);
}

.back_to_top a:hover {
	color: var(--color-blue);
}

.masonry {
	column-count: 2;
	column-gap: 0.8em;
}

.project-tag {
	border-radius: 8px;
	border: 1px solid var(--color-medium-gray);
	color: var(--color-black);
	font-family: 'DM Mono', monospace;
	font-weight: 300;
	font-size: 12px;
	text-align: left;
	margin-right: var(--spacing-2);
	letter-spacing: 0.05em;
	padding: var(--spacing-2) var(--spacing-3);
	white-space: nowrap;
	line-height: 3em;
	text-transform: uppercase;
}

.project-tag-home {
	border-radius: 8px;
	border: 1px solid var(--color-medium-gray);
	color: var(--color-black);
	font-family: 'DM Mono', monospace;
	font-weight: 300;
	font-size: 12px;
	text-align: left;
	margin-right: var(--spacing-2);
	letter-spacing: 0.05em;
	padding: var(--spacing-2) var(--spacing-3);
	text-transform: uppercase;
}

.detail-header {
	background-color: var(--color-light-gray);
	padding: 72px 0px 32px 0px;
}

.detail-header-inner {
	width: 56%;
	margin: 0 auto;
}

.twitter-tweet-rendered {
	margin-left: auto;
	margin-right: auto;
	margin-top: 48px !important;
}

.bandcamp-player {
	border: 0;
	width: 100%;
	height: 120px;
	margin-top: 16px;
}

.bandcamp-player #player .inline_player {
	max-width: none !important;
}

.container-fade-out {
	--fade-amount: 25%;
	mask-image: linear-gradient(to bottom, black var(--fade-amount), black calc(100% - var(--fade-amount)), transparent);
}

/* YOUTUBE EMBED START */
.video-container {
	width: 100%;
    aspect-ratio: 16 / 9;
}

.video {
    width: 100%;
    height: 100%;
    border-radius: 8px;
}
/* YOUTUBE EMBED END */

/* DIVS END
------------------ */


/* WORK GRID
------------------- */
.work {
	background-color: var(--color-white);
	width:100%;
	margin: 0 auto;
	overflow: hidden;
	padding-bottom: 76px;
}

.grid {
	width: 85%;
	max-width: 1148px;
	margin: 0 auto;
	text-align: justify;
}

.grid img {
	width: 100%;
	position: relative;
	display: block;
}

.grid:after {content:'';
	display: inline-block;
	width: 100%;
}

.grid-box {
	overflow: hidden;
	width: 48%;
	height: 48%;
	position: relative;
	display: inline-block;
	margin-top: 5%;
	transition: all .2s ease-in-out;
	vertical-align: top;
}

.info {
	opacity: 0;
	top: 0;
	color: var(--color-white);
	position: absolute;
	width: -webkit-fill-available;
	height: 100%;
	text-align: left;
	padding: var(--spacing-9);
	transition: opacity 0.2s linear;
	background-color: var(--color-black);
}
/* ... */

